<resources>
    <string name="app_name">چابک‌رسان</string>
    <string name="service_name">چابک</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">فعال‌ سازی</string>
    <string name="title_activity_wall">صفحه اصلی</string>
    <string name="title_payam_resan">پیام‌رسان</string>
    <string name="title_about_chabok">درباره چابک</string>
    <string name="title_settings">تنظیمات</string>
    <string name="captain">کاپیتان چابک</string>
    <string name="wall">دیوار چابک</string>
    <string name="full_name">نام و نام‌خانوادگی</string>
    <string name="contact_info">شماره تماس</string>

    //----widget actions and titles
    <string name="action_get_activation">تایید و ادامه</string>
    <string name="action_done">تایید</string>
    <string name="action_activate">فعال سازی</string>
    <string name="action_resend">ارسال مجدد</string>
    <string name="action_back">بازگشت</string>
    <string name="action_ok">فهمیدم</string>
    <string name="action_lets_go">بریم دنبال گنج</string>
    <string name="action_next">برو بعدی</string>
    <string name="action_select_captain">کاپیتان چابکت رو انتخاب کن</string>
    <string name="action_confirm">تایید</string>
    <string name="action_try_again">تلاش مجدد</string>
    <string name="action_cancel">انصراف</string>
    <string name="action_yes">بله</string>
    <string name="action_no">خیر</string>
    <string name="action_yeah">باشه</string>
    <string name="action_join_us">به ما بپیوندید</string>
    <string name="menu_item_inbox">پیام‌ها</string>
    <string name="menu_item_setting">تنظیمات</string>
    <string name="action_send">ارسال</string>
    <string name="do_notify">اطلاع از پیام‌های جدید</string>
    <string name="sent">ارسال شد</string>
    <string name="not_sent">خطا در ارسال</string>
    <string name="sending">در حال ارسال</string>
    <string name="delivered">تحویل داده شد</string>

    //----hints

    <string name="hint_phone_no">شماره موبایل به همراه کد کشور</string>
    <string name="hint_name">نام و نام خانوادگی</string>
    <string name="hint_company">نام شرکت (اختیاری)</string>
    <string name="hint_email">آدرس ایمیل</string>
    <string name="hint_code_no">کد فعال سازی</string>
    <string name="outgoing_message">متن پیام را وارد کنید</string>


    //----anounce

    <string name="anounce_register">برای مشاهده دمو لطفا مشخصات خود را وارد کنید</string>
    <string name="anounce_settings">با فعال‌سازی این گزینه پیغام‌های جدید در نوار نوتیفیکیشن اعلام نخواهد شد.</string>

    //----messages

    <string name="msg_error_in_connection">خطا در برقراری ارتباط با سرور. لطفاً بعدا تلاش نمایید</string>
    <string name="invalid_unknown">خطا در انجام عملیات</string>
    <string name="invalid_activation_code">کد فعال سازی صحیح را وارد نمایید</string>
    <string name="msg_null_not_allowed">داده وارد شده برای فیلد %1$s نمی تواند خالی باشد.</string>
    <string name="msg_invalid_name">داده وارد شده برای فیلد نام و نام‌خانوادگی نمی‌تواند کمتر از ۳ کاراکتر باشد.</string>
    <string name="msg_invalid_text">مقدار وارد شده صحیح نیست</string>
    <string name="msg_invalid_email">ایمیل صحیح را وارد کنید</string>
    <string name="msg_invalid_mobile">شماره موبایل وارد شده معتبر نمی‌باشد.</string>
    <string name="msg_no_internet_connection">اینترنت خود را برسی کنید</string>
    <string name="msg_waiting">لطفاً منتظر بمانید</string>
    <string name="msg_cannot_vote_again">شما قبلا در این نظرسنجی شرکت کرده اید</string>
    <string name="msg_plz_wait">لطفاً کمی صبر نمایید</string>
    <string name="msg_app_exit_confirm">آیا مایلید که از برنامه خارج شوید؟</string>
    <string name="msg_reward">%1$s</string>
    <string name="msg_not_found">باید بیشتر کاوش کنیم این اطراف خبری از گنج نیست، بیشتر در محوطه بچرخ و منتظر راهنمایی‌های ما باش!</string>


    //----labels

    <string name="lbl_name">نام</string>
    <string name="lbl_email">ایمیل</string>
    <string name="lbl_mobile">شماره موبایل</string>
    <string name="lbl_adp_copy_right">طراحی و اجرا از آتیه داده پرداز</string>
    <string name="lbl_app_description">راهکاری برای ارتباط پیشرفته با کاربران</string>
    <string name="lbl_chabok_address">میدان ونک، خیابان ملاصدرا، خیابان شیرازی شمالی، خیابان حکیم اعظم، پلاک ۱۹</string>
    <string name="lbl_chabok_about">محصولی از شرکت آتیه‌داده‌پرداز</string>
    <string name="lbl_chabok_phone">021-89678</string>
    <string name="lbl_chabok_url">http://chabokpush.com</string>
    <string name="lbl_map_demo">http://demo.chabokpush.com/?location=%1$s,%2$s</string>
    <string name="lbl_notification_disable">غیر فعال سازی نوتیفیکیشن</string>
    <string name="lbl_chabok_fa">کاپیتان چابک</string>
    <string name="lbl_chabok_en">Capitan Chabok</string>
    <string name="lbl_description">از یک نقشه گنج قدیمی فهمیدیم که کلی گنج زیر خاک این منطقه دفن شده، تو میتونی با زدن کلنگ در محوطه نمایشگاه شانست رو امتحان کنی.
 \n با توجه به قوانین این بازی، تعامل بیشتر و  راهنمایی ما برای پیدا کردن گنج، محل جغرافیایی شما برای ما و سایر کاربران این بازی قابل مشاهده خواهد بود.</string>


    //-------actions
    <string name="title_actions">امکانات</string>
    <string name="action_delete">حذف</string>
    <string name="action_share">اشتراک گذاری</string>
    <string name="action_online">آنلاین</string>
    <string name="action_offline">آفلاین</string>
    <string name="action_trying_to_connect">برقراری ارتباط</string>


    //-----etc

    <string name="monthFarvardin">فروردين</string>
    <string name="monthOrdibehesht">ارديبهشت</string>
    <string name="monthKhordad">خرداد</string>
    <string name="monthTir">تير</string>
    <string name="monthMordad">مرداد</string>
    <string name="monthShahrivar">شهريور</string>
    <string name="monthMehr">مهر</string>
    <string name="monthAban">آبان</string>
    <string name="monthAzar">آذر</string>
    <string name="monthDay">دي</string>
    <string name="monthBahman">بهمن</string>
    <string name="monthEsfand">اسفند</string>
    <string name="weekSunday">يکشنبه</string>
    <string name="weekMonday">دوشنبه</string>
    <string name="weekTuesday">سه شنبه</string>
    <string name="weekWednesday">چهارشنبه</string>
    <string name="weekThursday">پنج شنبه</string>
    <string name="weekFriday">جمعه</string>
    <string name="weekSaturday">شنبه</string>

    <string name="today">امروز</string>
    <string name="yesterday">دیروز</string>

    <string name="version">نگارش %1$s</string>
    <string name="title_activity_main">چابک‌رسان</string>
    <string name="title_activity_about">درباره چابک</string>
    <string name="attention">توجه</string>
    <string name="location_unavailable">در حال حاضر سرویس مکان‌یابی قابل دسترس نیست.</string>
    <string name="internet_error_desc">اتصال به اینترنت را بررسی کرده \n و دوباره تلاش کنید</string>
    <string name="should_allow">برای استفاده از قابلیت‌های این برنامه بایستی اجازه دسترسی به مکان را فعال نمایید.</string>


</resources>
