<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_setting" />


        <com.adp.chabok.ui.TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_about_chabok"
            android:textColor="@color/my_white"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/chabok_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chabok_logo" />

        <com.adp.chabok.ui.TextView
            android:id="@+id/chabok_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/service_name"
            android:textAlignment="center"
            android:textColor="@color/chabok_color"
            android:textSize="24sp" />

        <com.adp.chabok.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lbl_app_description"
            android:textColor="@color/msg_color"
            android:textSize="14sp" />


        <com.adp.chabok.ui.TextView
            style="@style/Text.subtitle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_box"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openSite"
            android:text="@string/lbl_chabok_url" />

        <com.adp.chabok.ui.TextView
            style="@style/Text.subtitle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_box"
            android:clickable="true"
            android:gravity="center"
            android:onClick="dialNumber"
            android:text="@string/lbl_chabok_phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.adp.chabok.ui.TextView
            style="@style/Text.title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/lbl_chabok_about"
            android:textSize="16sp" />

        <com.adp.chabok.ui.TextView
            style="@style/Text.content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/lbl_chabok_address" />
    </LinearLayout>


</RelativeLayout>