<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp">

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_margin="16dp"
                    android:visibility="invisible" />

                <com.adp.chabok.ui.TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anounce_register" />

                <com.adp.chabok.ui.EditText
                    android:nextFocusForward="@+id/companyEditText"
                    android:id="@+id/nameEditText"
                    style="@style/Text.SettingItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:maxLength="30" />

                <com.adp.chabok.ui.EditText
                    android:id="@+id/companyEditText"
                    style="@style/Text.SettingItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:hint="@string/hint_company"
                    android:inputType="textCapWords"
                    android:maxLength="30" />

                <com.adp.chabok.ui.EditText
                    style="@style/Text.SettingItem"
                    android:id="@+id/emailEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="60dp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.adp.chabok.ui.Button
        android:id="@+id/doneButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_done"
        android:text="@string/action_get_activation"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
