<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:scaleType="center"
        android:adjustViewBounds="true" />

    <com.adp.chabok.ui.EditText
        android:id="@+id/full_name"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/avatar"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_color"
        android:hint="@string/full_name"
        android:maxLength="30"
        android:background="@drawable/white_input_bg"
        android:textSize="18sp"/>

    <com.adp.chabok.ui.EditText
        android:id="@+id/contact_info"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/full_name"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/contact_info"
        android:inputType="phone"
        android:digits="0123456789"
        android:maxLength="12"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/white_input_bg"
        android:textSize="18sp"/>

    <com.adp.chabok.ui.Button
        android:id="@+id/lets_go_btn"
        android:layout_width="163dp"
        android:layout_height="63dp"
        android:layout_marginBottom="48dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/action_lets_go"
        android:textSize="18sp"
        android:textColor="@color/brown_btn_text"
        android:background="@drawable/brown_button_bg"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>